--- a/locales/pl/translation.json
+++ b/locales/pl/translation.json
@@ -2,7 +2,7 @@
     "index": {
         "section-1": {
           "text-1": "Projekty graficzne skrojone na miarę <strong>Twoich potrzeb.</strong>",
-          "text-2": "Wystarczy, że napiszesz do nas wiadomość, a my przygotujemy bezpłatną wycenę zlecenia.",
+          "text-2": "Wystarczy, że napiszesz do nas wiadomość, a&nbsp;my przygotujemy bezpłatną wycenę zlecenia.",
           "send-message": "Napisz wiadomość",
           "see-portfolio": "Zobacz portfolio"
         },
